# melangerie

./: LICENSE.md  README.md
client/: package-lock.json  package.json  svelte.config.js  tsconfig.json
client/src/: stores.js
client/src/components/: Modal.svelte  Popup.svelte
client/src/lib/: index.ts  stores.js  stores.ts
client/src/routes/: +page.svelte  ChatRoom.svelte  MessageBox.svelte  Nav.svelte  SelectUser.svelte
server/: Cargo.toml  Rocket.toml  db.sqlite
server/migrations/: down.sql  up.sql
server/migrations/2024-05-17-172244_create_users/: up.sql
server/src/: auth.rs  chat.rs  cors.rs  log.rs  main.rs  test.rs  timing.rs  types.rs  ws_handler.rs
server/src/events/: egress.rs  list.rs  message.rs  mod.rs  timing.rs
