[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
pretty_env_logger = "0.5.0"
fastrand = "2.0.2"
rocket = {version = "0.5.0", features = ["json", "secrets"]}
ws = {package = "rocket_ws", version="0.1.0"}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
bcrypt = { version = "0.15.1", features = ["alloc"] }
chrono = { version = "0.4.37", features = ["serde"] }
jsonwebtoken = "9.3.0"
dotenvy = "0.15.7"
